Actions
Bug #9411
closedptem: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
../../common/io/ptem.c: In function 'ptemrput': ../../common/io/ptem.c:417:3: error: this statement may fall through [-Werror=implicit-fallthrough=] { ^ ../../common/io/ptem.c:424:2: note: here default: ^~~~~~~ ../../common/io/ptem.c: In function 'ptemwmsg': ../../common/io/ptem.c:867:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (ntp->state & OFLOW_CTL) ^ ../../common/io/ptem.c:870:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b80bb91b66c2de22d944d93cdc98304eb32be782
commit b80bb91b66c2de22d944d93cdc98304eb32be782 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:40.000Z 9411 ptem: this statement may fall through Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions