usr/src/uts/common/io/ptem.c
@@ -419,6 +419,7 @@ ptemrput(queue_t *q, mblk_t *mp)
 				qenable(WR(q));
 			}
 		}
+		/* FALLTHROUGH */
 	default:
 		putnext(q, mp);
 		break;
@@ -865,6 +866,7 @@ out:
 		}
 		if (ntp->state & OFLOW_CTL)
 			return (0);
+		/* FALLTHROUGH */
 
 	default:
 		putnext(q, mp);
